[project]
name = "CrewAI_Ray_Masumi_Demo"
version = "0.1.0"
description = "Poem generation using crewAI, deployed on Ray Serve and using the Masumi payment integration"
authors = [
    { name = "Sebastian Kuepers", email = "sebastian@masumi.network" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.102.0",
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.17.0,<0.20.0",
    "python-dotenv>1.0.0",
    "ray[serve]>=2.42.1",
    "pydantic>=2.4.2",
    "masumi_crewai"
]

[project.scripts]
register = "poem.register:main"
serve = "poem.main:main"
kickoff = "poem.main:kickoff"
start_and_pay = "poem.start_and_pay:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv.build"